--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
                             <h3 class="feature-overview-title">0</h3>
                             <h3 class="feature-overview-title">1</h3>
                             <h3 class="feature-overview-title">2</h3>
-                            <h3 class="feature-overview-title">3</h3>
+                            <h3 class="feature-overview-title">00</h3>
                             <h3 class="feature-overview-title">4</h3>
                             <h3 class="feature-overview-title">5</h3>
-                            <h3 class="feature-overview-title">6</h3>
-                            <h3 class="feature-overview-title">1</h3>
+                            <h3 class="feature-overview-title">,0</h3>
+                            <h3 class="feature-overview-title">2</h3>
                             <h3 class="feature-overview-title">8</h3>
                           </div>
                           <div style="transform: translate3d(0px, 600%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="overview-counter-single-row _2">
