--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                             <h3 class="feature-overview-title">00</h3>
                            
                           </div>
-                          <h3 class="feature-overview-title">K+</h3>
+                          <h3 class="feature-overview-title">+</h3>
                         </div>
                         <div class="feature-overview-details">Average bi-weekly users</div>
                       </div>
@@ -391,7 +391,7 @@
                             <h3 class="feature-overview-title">4</h3>
                             <h3 class="feature-overview-title">5</h3>
                             <h3 class="feature-overview-title">6</h3>
-                            <h3 class="feature-overview-title">4</h3>
+                            <h3 class="feature-overview-title">8,00</h3>
                             <h3 class="feature-overview-title">8</h3>
                           </div>
                           <div style="transform: translate3d(0px, 600%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="overview-counter-single-row _2">
@@ -402,7 +402,7 @@
                             <h3 class="feature-overview-title">4</h3>
                             <h3 class="feature-overview-title">5</h3>
                             <h3 class="feature-overview-title">6</h3>
-                            <h3 class="feature-overview-title">7</h3>
+                            <h3 class="feature-overview-title">0,</h3>
                             <h3 class="feature-overview-title">0</h3>
                           </div>
                           <div style="transform: translate3d(0px, -700%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="overview-counter-single-row _1">
@@ -413,10 +413,10 @@
                             <h3 class="feature-overview-title">0</h3>
                             <h3 class="feature-overview-title">0</h3>
                             <h3 class="feature-overview-title">0</h3>
-                            <h3 class="feature-overview-title">9</h3>
+                            <h3 class="feature-overview-title">000</h3>
                             <h3 class="feature-overview-title">0</h3>
                           </div>
-                          <h3 class="feature-overview-title">M+</h3>
+                          <h3 class="feature-overview-title">+</h3>
                         </div>
                         <div class="feature-overview-details">Worldwide Users</div>
                       </div>
