--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="primary-button-text">Purchase SpaceHub Premium</div>
               <div class="primary-button-hover-bg" style="opacity: 0;"></div>
   
-      </a><a href="https://store.orbituniverse.com" class="primary-button nav-portait-none w-inline-block">
+      </a><a href="https://discordapp.com/users/1114690733899796540/" class="primary-button nav-portait-none w-inline-block">
           <div class="primary-button-text">Get Started Now!</div>
           <div class="primary-button-hover-bg" style="opacity: 0;"></div>
          </a><a href="https://orbituniverse.com/discord" class="secondery-button nav-portait-none w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
@@ -84,7 +84,7 @@
           <h1 class="banner-title"><span class="banner-title-marked">DaddyDeveloper, </span> Simply The Best.
           </h1>
           <p class="banner-details">Hello, I'm DaddyDeveloper. I'm a new and upcoming Roblox developer, looking for some new work!</p>
-          <div class="_2-buttons-wrap"><a href="https://orbituniverse.com/download" target="_blank" class="primary-button w-inline-block">
+          <div class="_2-buttons-wrap"><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="primary-button w-inline-block">
               <div class="primary-button-flex"><img src="win-10.png" loading="lazy" alt="" class="primary-button-icon">
                 <div class="primary-button-text">Get Started Now!</div>
               </div>
@@ -168,7 +168,7 @@
             <h2 class="section-title roadmap">Simple payment process.</h2>
             <p class="section-details">With this payment process, you can be sure that you donr get scammed!</p>
           </div>
-          <div class="section-title-flex-right-wrap"><a href="https://orbituniverse.com/download" class="primary-button w-inline-block">
+          <div class="section-title-flex-right-wrap"><a href="https://discordapp.com/users/1114690733899796540/" class="primary-button w-inline-block">
               <div class="primary-button-text">Get Started Now</div>
               <div class="primary-button-hover-bg" style="opacity: 0;"></div>
             </a></div>
@@ -251,7 +251,7 @@
                     <div class="more-feature-list-border"></div>
                   </li>
                 </ul>
-                <div class="_2-buttons-wrap left"><a href="https://orbituniverse.com/download" target="_blank" class="primary-button w-inline-block">
+                <div class="_2-buttons-wrap left"><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="primary-button w-inline-block">
                     <div class="primary-button-flex"><img src="win-10.png" loading="lazy" alt="" class="primary-button-icon">
                       <div class="primary-button-text">Get Started Now!</div>
                     </div>
@@ -286,7 +286,7 @@
               <div data-w-id="bd27cc08-55d7-b8d5-17d8-a80455896209" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="more-feature-content-wrap">
                 <h2 class="more-feature-title">Take control of your next game.</h2>
                 <p class="more-feature-details">I make sure that you can customize everything you need with feedback.</p>
-                <div class="_2-buttons-wrap left"><a href="https://orbituniverse.com/download" target="_blank" class="primary-button w-inline-block">
+                <div class="_2-buttons-wrap left"><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="primary-button w-inline-block">
                     <div class="primary-button-flex"><img src="win-10.png" loading="lazy" alt="" class="primary-button-icon">
                       <div class="primary-button-text">Get Started Now!</div>
                     </div>
@@ -701,7 +701,7 @@
             <div data-w-id="8a357d5d-4684-1a69-cf8c-d2ae056869d8" class="cta-content-wrap" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
               <h2 class="section-title">Join me.</h2>
               <p class="section-details cta">Are you ready to make your experiences better? Well start today!</p>
-              <div class="_2-buttons-wrap left tab-center"><a href="https://orbituniverse.com/download" target="_blank" class="primary-button w-inline-block">
+              <div class="_2-buttons-wrap left tab-center"><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="primary-button w-inline-block">
                   <div class="primary-button-flex"><img src="win-10.png" loading="lazy" alt="" class="primary-button-icon">
                     <div class="primary-button-text">Get Started Now!</div>
                   </div>
