--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="container navbar"><a href="/" class="logo-wrap w-nav-brand w--current" aria-label="home"><img src="icon.png" loading="lazy" alt="" class="logo"></a>
         <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
           <div class="nav-links-wrapper">
-            <a href="https://orbituniverse.com/pricing" class="single-nav-link w-inline-block">
+            <a href="https://discordapp.com/users/1114690733899796540/" class="single-nav-link w-inline-block">
               <div>Pricing</div>
-            </a><a href="https://orbituniverse.com/discord" class="single-nav-link w-inline-block">
+            </a><a href="https://discordapp.com/users/1114690733899796540/" class="single-nav-link w-inline-block">
               <div>Discord</div>
             </a>
             <div data-hover="true" data-delay="500" class="nav-dropdown pages w-dropdown" style="">
@@ -56,16 +56,16 @@
                   </div>
                 </div>
               </nav>
-            </div><a href="https://store.orbituniverse.com/" class="primary-button nav-for-mobile w-inline-block">
+            </div><a href="https://discordapp.com/users/1114690733899796540/" class="primary-button nav-for-mobile w-inline-block">
               <div class="primary-button-text">Purchase SpaceHub Premium</div>
               <div class="primary-button-hover-bg" style="opacity: 0;"></div>
   
       </a><a href="https://discordapp.com/users/1114690733899796540/" class="primary-button nav-portait-none w-inline-block">
           <div class="primary-button-text">Get Started Now!</div>
           <div class="primary-button-hover-bg" style="opacity: 0;"></div>
-         </a><a href="https://orbituniverse.com/discord" class="secondery-button nav-portait-none w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
+         </a><a href="https://discordapp.com/users/1114690733899796540/" class="secondery-button nav-portait-none w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
           <div class="primary-button-text">Discord</div>
-          </a><div class="primary-button-hover-bg"><a href="https://orbituniverse.com/discord" class="secondery-button nav-portait-none w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
+          </a><div class="primary-button-hover-bg"><a href="https://discordapp.com/users/1114690733899796540/" class="secondery-button nav-portait-none w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
       
             </a>
           </div>
@@ -523,7 +523,7 @@
                         <li class="plan-list-item"><img src="https://assets-global.website-files.com/64e47a9f6d41401ec4903e9a/64e6147e7253e2edd0f29a7d_Feature-Check.svg" loading="lazy" alt="" class="plan-list-icon">
                           <div class="plan-list-details">Best quality</div>
                         </li>
-                      </ul><a href="https://store.orbituniverse.com/product/space-hub-premium-90-off" class="pricing-button w-button">Choose this plan</a>
+                      </ul><a href="https://discordapp.com/users/1114690733899796540/product/space-hub-premium-90-off" class="pricing-button w-button">Choose this plan</a>
                     </div>
                   </div>
                 </div>
@@ -565,7 +565,7 @@
                         <li class="plan-list-item"><img src="https://assets-global.website-files.com/64e47a9f6d41401ec4903e9a/64e6147e7253e2edd0f29a7d_Feature-Check.svg" loading="lazy" alt="" class="plan-list-icon">
                           <div class="plan-list-details">Everything in lower plans</div>
                         </li>
-                      </ul><a href="https://store.orbituniverse.com/product/orbit-executor-premium-60-off" class="pricing-button w-button">Choose this plan</a>
+                      </ul><a href="https://discordapp.com/users/1114690733899796540/product/orbit-executor-premium-60-off" class="pricing-button w-button">Choose this plan</a>
                     </div>
                   </div>
                 </div>
