--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container navbar"><a href="/" class="logo-wrap w-nav-brand w--current" aria-label="home"><img src="icon.png" loading="lazy" alt="" class="logo"></a>
         <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
           <div class="nav-links-wrapper">
-            <a href="https://discordapp.com/users/1114690733899796540/" class="single-nav-link w-inline-block">
+            <a href="#pricing-section" class="single-nav-link w-inline-block">
               <div>Pricing</div>
             </a><a href="https://discordapp.com/users/1114690733899796540/" class="single-nav-link w-inline-block">
               <div>Discord</div>
@@ -441,7 +441,7 @@
     </section>
     <section class="section">
       <div class="container">
-        <div class="section-title-wrap pricing" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+        <div class="section-title-wrap pricing" id="pricing-section" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
           <h2 class="section-title pricing">Check out all the plans</h2>
           <p class="section-details pricing">Check out the plans that will fit into your budget.</p>
         </div>
