--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h3 class="feature-title">High Quality</h3>
                 <p class="feature-details _1">The services I do are high quality, I can work and your code and make sure it works just perfectly!</p>
               </div>
-              <div class="big-feature-img-wrap _1"><img src="https://cdn.discordapp.com/attachments/1101213713240961146/1165771391560335440/wGXxrXRNxd4BQAAAABJRU5ErkJggg.png?ex=65481036&amp;is=65359b36&amp;hm=40a01a48057227ce7e9275b8d2de741406b5b2ec5c4231d8c5bcda43d52fa505&amp;" loading="lazy" alt="" class="big-feature-img-1" style="will-change: transform; transform: translate3d(0px, 40px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"></div>
+              <div class="big-feature-img-wrap _1"><img src="shot1.png" loading="lazy" alt="" class="big-feature-img-1" style="will-change: transform; transform: translate3d(0px, 40px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"></div>
             </div>
             
             <div class="big-feature-wrap _2" style="opacity: 0; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
@@ -126,7 +126,7 @@
                 <p class="feature-details _2">I can work at hyperfast speed, delivering services faster!</p>
               </div>
               <div class="big-feature-img-wrap _2"><img src="1.png" loading="lazy" alt="" class="feature-card-img-1" style="will-change: transform; transform: translate3d(0px, 79.992px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"><img src="2.png" loading="lazy" alt="" class="feature-card-img-2" style="will-change: transform; transform: translate3d(0px, -79.992px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"><img src="" loading="lazy" alt="" class="feature-img-circle bottom"><img src="" loading="lazy" alt="" class="feature-img-circle"></div>
-            <img src="https://cdn.discordapp.com/attachments/1101213713240961146/1165771391560335440/wGXxrXRNxd4BQAAAABJRU5ErkJggg.png?ex=65481036&amp;is=65359b36&amp;hm=40a01a48057227ce7e9275b8d2de741406b5b2ec5c4231d8c5bcda43d52fa505&amp;" loading="lazy" alt="" class="big-feature-img-1" style="will-change: transform; transform: translate3d(0px, 24.2996px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"></div>
+            <img src="shot2.png" loading="lazy" alt="" class="big-feature-img-1" style="will-change: transform; transform: translate3d(0px, 24.2996px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"></div>
           </div>
           <div class="small-features-grid-wrap">
             <div id="w-node-_6921ad42-29fe-9f83-e18f-5a746e97e979-c4903ea4" class="single-small-feature" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
