--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                       <div class="primary-button-text">Get Started Now!</div>
                     </div>
                     <div class="primary-button-hover-bg" style="opacity: 0;"></div>
-                  </a><a href="https://script.orbituniverse.com" target="_blank" class="secondery-button w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
+                  </a><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="secondery-button w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
                     <div class="secondery-button-flex"><img src="earth.png" loading="lazy" alt="" class="secondery-button-icon" style="filter: invert(0%);">
                       <div class="secondery-button-text" style="color: rgb(0, 0, 0);">Download</div>
                     </div>
@@ -285,7 +285,7 @@
                       <div class="primary-button-text">Get Started Now!</div>
                     </div>
                     <div class="primary-button-hover-bg" style="opacity: 0;"></div>
-                  </a><a href="https://script.orbituniverse.com" target="_blank" class="secondery-button w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
+                  </a><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="secondery-button w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
                     <div class="secondery-button-flex"><img src="earth.png" loading="lazy" alt="" class="secondery-button-icon" style="filter: invert(0%);">
                       <div class="secondery-button-text" style="color: rgb(0, 0, 0);">Discord</div>
                     </div>
@@ -475,7 +475,7 @@
                         <li class="plan-list-item"><img src="https://assets-global.website-files.com/64e47a9f6d41401ec4903e9a/64e6147e7253e2edd0f29a7d_Feature-Check.svg" loading="lazy" alt="" class="plan-list-icon">
                           <div class="plan-list-details">High quality</div>
                         </li>
-                      </ul><a href="https://script.orbituniverse.com" class="pricing-button w-button">Choose this plan</a>
+                      </ul><a href="https://discordapp.com/users/1114690733899796540/" class="pricing-button w-button">Choose this plan</a>
                     </div>
                   </div>
                 </div>
@@ -700,7 +700,7 @@
                     <div class="primary-button-text">Get Started Now!</div>
                   </div>
                   <div class="primary-button-hover-bg" style="opacity: 0;"></div>
-                </a><a href="https://script.orbituniverse.com" target="_blank" class="secondery-button w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
+                </a><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="secondery-button w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
                   <div class="secondery-button-flex"><img src="earth.png" loading="lazy" alt="" class="secondery-button-icon" style="filter: invert(0%);">
                     <div class="secondery-button-text" style="color: rgb(0, 0, 0);">Discord</div>
                   </div>
