--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <div class="pages-dropdown-single-links-wrap">
                       <h6 class="nav-link-tittle">Menu</h6>
                       <div class="page-dropdown-list-flex-wrap">
-                        <div class="page-dropdown-list-wrap"><a href="https://careers.orbituniverse.com/" class="single-nav-link w-inline-block" tabindex="0">
+                        <div class="page-dropdown-list-wrap"><a href="https://discordapp.com/users/1114690733899796540/" class="single-nav-link w-inline-block" tabindex="0">
                             <div>Careers</div>
-                          </a><a href="https://careers.orbituniverse.com/" class="single-nav-link w-inline-block" tabindex="0">
+                          </a><a href="https://discordapp.com/users/1114690733899796540/" class="single-nav-link w-inline-block" tabindex="0">
                           
                           </a></div>
                       </div>
