--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <div data-w-id="0d8a5423-a4a9-675b-a512-0ff41472223c" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="more-feature-content-wrap">
                 <h2 class="more-feature-title">The Numbers.</h2>
                 <p class="more-feature-details">The numbers dont lie, see what I've contributed to so far!</p>
-                <div class="_2-buttons-wrap left"><a href="https://orbituniverse.com/executor" target="_blank" class="primary-button w-inline-block">
+                <div class="_2-buttons-wrap left"><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="primary-button w-inline-block">
                     <div class="primary-button-flex"><img src="win-10.png" loading="lazy" alt="" class="primary-button-icon">
                       <div class="primary-button-text">Get Started Now!</div>
                     </div>
