--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             
             <div class="roadmap-content-wrap">
               <h4 class="roadmap-title">6. Mining system</h4>
-              <a href="https://www.youtube.com/watch?v=KwgcwZYLDb8" target="_blank" class="roadmap-details">https://www.youtube.com/watch?v=KwgcwZYLDb8</a>
+              <a href="https://www.youtube.com/watch?v=wp5xuZbL1Ns" target="_blank" class="roadmap-details">https://www.youtube.com/watch?v=wp5xuZbL1Ns</a>
             </div>
           </div>
         </div>
