--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <div class="primary-button-hover-bg" style="opacity: 0;"></div>
                   </a><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="secondery-button w-inline-block" style="border-color: rgba(255, 255, 255, 0.2);">
                     <div class="secondery-button-flex"><img src="earth.png" loading="lazy" alt="" class="secondery-button-icon" style="filter: invert(0%);">
-                      <div class="secondery-button-text" style="color: rgb(0, 0, 0);">Download</div>
+                      <div class="secondery-button-text" style="color: rgb(0, 0, 0);">Discord</div>
                     </div>
                     <div class="secondery-button-hover-bg" style="width: 0%; height: 100%;"></div>
                   </a></div>
