--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
       <div class="container">
         <div class="section-title-wrap explore" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
           <h2 class="section-title explore">The Advantages.</h2>
-          <p class="section-details explore">Explore why you should hire me rather than anynoe else!</p>
+          <p class="section-details explore">Explore why you should hire me rather than anyone else!</p>
         </div>
         <div class="features-wrap">
           <div class="big-feature-grid-wrap">
             <div data-w-id="0d70f366-a41d-aebb-e8f3-8c2aa7a4aca1" class="big-feature-wrap _1" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
               <div class="big-features-details-wrap"><img src="https://assets-global.website-files.com/64e47a9f6d41401ec4903e9a/64e5acd3ea27216584281619_Feature-Icon-1.svg" loading="lazy" alt="" class="feature-icon">
                 <h3 class="feature-title">High Quality</h3>
-                <p class="feature-details _1">The services I do are high quality, I can work and your code and make sure it works just perfectly!</p>
+                <p class="feature-details _1">The services I do are high quality, I can work on your code and make sure it works just perfectly!</p>
               </div>
               <div class="big-feature-img-wrap _1"><img src="shot1.png" loading="lazy" alt="" class="big-feature-img-1" style="will-change: transform; transform: translate3d(0px, 40px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"></div>
             </div>
@@ -160,7 +160,7 @@
         <div class="section-title-wrap flex bottom" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
           <div class="section-title-flex-left-wrap roadmap">
             <h2 class="section-title roadmap">Simple payment process.</h2>
-            <p class="section-details">With this payment process, you can be sure that you donr get scammed!</p>
+            <p class="section-details">With this payment process, you can be sure that you dont get scammed!</p>
           </div>
           <div class="section-title-flex-right-wrap"><a href="https://discordapp.com/users/1114690733899796540/" class="primary-button w-inline-block">
               <div class="primary-button-text">Get Started Now</div>
@@ -279,7 +279,7 @@
             <div id="w-node-bd27cc08-55d7-b8d5-17d8-a8045589622e-c4903ea4" class="more-feature-grid-right-wrap">
               <div data-w-id="bd27cc08-55d7-b8d5-17d8-a80455896209" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="more-feature-content-wrap">
                 <h2 class="more-feature-title">Take control of your next game.</h2>
-                <p class="more-feature-details">I make sure that you can customize everything you need with feedback.</p>
+                <p class="more-feature-details">I make sure that you can customize everything you need with your feedback.</p>
                 <div class="_2-buttons-wrap left"><a href="https://discordapp.com/users/1114690733899796540/" target="_blank" class="primary-button w-inline-block">
                     <div class="primary-button-flex"><img src="win-10.png" loading="lazy" alt="" class="primary-button-icon">
                       <div class="primary-button-text">Get Started Now!</div>
